syntax = "proto3";

option go_package = "github.com/Nurkanat-hub/MyHealthbite/api-gateway/proto;proto";

package user;

service UserService {
  rpc Register(RegisterRequest) returns (AuthResponse);
  rpc Login(LoginRequest) returns (AuthResponse);
  rpc GetProfile(UserIdRequest) returns (UserResponse);
  rpc UpdateProfile(UpdateProfileRequest) returns (UserResponse);
  rpc DeleteAccount(UserIdRequest) returns (Empty);
}

message RegisterRequest {
  string name = 1;
  string email = 2;
  string password = 3;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message AuthResponse {
  string token = 1;
  string userId = 2;
  string name = 3;
}

message UserIdRequest {
  string userId = 1;
}

message UpdateProfileRequest {
  string userId = 1;
  string name = 2;
  string goal = 3;
  float height = 4;
  float weight = 5;
  string address = 6;
  string phone = 7;
}

message UserResponse {
  string userId = 1;
  string name = 2;
  string email = 3;
  string goal = 4;
  float height = 5;
  float weight = 6;
  string address = 7;
  string phone = 8;
}

message Empty {}
